Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -25,11 +25,11 @@ items:
     location: Splendor
     venue: Amsterdam
     url: 'https://www.splendoramsterdam.com'
-  - title: With Jeroen van Veen - Canto Ostinato & beyond
-    date: 2019-12-07 20:00:00
-    location: Agnietenhof Theater
-    venue: Tiel (NL)
-    url: www.agnietenhof.nl
+  - title: Mike del Ferro & Luca Ciarla
+    date: 2020-04-26 20:00:00
+    location: Nassau Theatre
+    venue: Cape Town (South Africa)
+    url: 'https://www.grooteschuurhigh.co.za/'
   - title: Mike del Ferro trio (Afternoon Concert)
     date: 2019-11-09 15:00:00
     location: 'OBA Zuid Oost - free concert, sponsored by the Libary'
