Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -41,11 +41,11 @@ items:
     location: De Meerse
     venue: Hoofddorp (NL)
     url: 'https://www.demeerse.nl/'
-  - title: Slow Water Music - Mezmerizing Visuals with live Concert
-    date: 2019-11-09 20:00:00
+  - title: Canto Ostinato and Beyond
+    date: 2020-02-28 20:00:00
     location: TenClub
     venue: Amsterdam
-    url: 'https://www.facebook.com/events/743919619382916/'
+    url: www.tenclub.nl
   - title: Mike del Ferro with Mbuso Khoza from South Africa
     date: 2019-12-15 15:00:00
     location: Fenix Music Factory
