Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -56,11 +56,11 @@ items:
     location: jazzschool/jazzcampus
     venue: Basel (Switzerland)
     url: www.jazzcampus.com
-  - title: Solo Recital (Afterrnoon!!)
-    date: 2019-11-16 15:00:00
-    location: Galerie S
-    venue: Amsterdam
-    url: 'https://www.galerie-signaal.nl/'
+  - title: Mike del Ferro trio
+    date: 2020-05-06 20:00:00
+    location: Jazz Center (KZN University)
+    venue: Durban (South Africa)
+    url: 'https://www.facebook.com/UKZNJazzcentre/'
   - title: 'Jazz Plaza Festival, Havana , Cuba'
     date: 2020-01-14 15:00:00
     location: more details soon
