Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -51,11 +51,11 @@ items:
     location: Fenix Music Factory
     venue: Rotterdam (NL)
     url: 'http://www.fenixmusicfactory.nl/concerten/'
-  - title: Masterclass - self management and networking for Musicians
-    date: 2019-12-04 14:00:00
-    location: jazzschool/jazzcampus
-    venue: Basel (Switzerland)
-    url: www.jazzcampus.com
+  - title: Live concert under Hitchcock silent move "the Lodger'
+    date: 2020-01-29 19:00:00
+    location: Coral Gables Art Cinema
+    venue: Miami
+    url: 'http://www.dranoff2piano.org/events.html'
   - title: Mike del Ferro trio
     date: 2020-05-06 20:00:00
     location: Jazz Center (KZN University)
