Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -51,7 +51,7 @@ items:
     location: Fenix Music Factory
     venue: Rotterdam (NL)
     url: 'http://www.fenixmusicfactory.nl/concerten/'
-  - title: Live concert under Hitchcock silent move "the Lodger'
+  - title: Live concert under Hitchcock silent move "the Lodger' with Jeroen van Veen
     date: 2020-01-29 19:00:00
     location: Coral Gables Art Cinema
     venue: Miami
