Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,5 +1,5 @@
 items:
-  - title: Haiti Jazz Festival
+  - title: Haiti Jazz Festival with Mushy Widmaier
     date: 2020-01-23 19:30:00
     location: Port au Prince
     venue: Haiti
