Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -20,7 +20,7 @@ items:
     venue: 'Havana, Cuba'
     url: >-
       https://www.facebook.com/events/havana-music-tours/havana-jazz-plaza-2020-an-annual-jazz-festival-in-havana-cuba/524426591351115/
-  - title: 'Brel and beyond, Mike del Ferro and Micheline van Houtem'
+  - title: 'Jacques Brel and Beyond, Mike del Ferro and Micheline van Houtem'
     date: 2020-03-13 20:30:00
     location: Splendor
     venue: Amsterdam
@@ -45,11 +45,14 @@ items:
     location: TenClub
     venue: Amsterdam
     url: www.tenclub.nl
-  - title: Mike del Ferro with Mbuso Khoza from South Africa
-    date: 2019-12-15 15:00:00
-    location: Fenix Music Factory
-    venue: Rotterdam (NL)
-    url: 'http://www.fenixmusicfactory.nl/concerten/'
+  - title: >-
+      4 piano's: Irene Russo, Jeroen van Veen, Mike del Ferro, Fred van
+      Oldenburg
+    date: 2020-04-21 20:00:00
+    location: Teatro Accademico
+    venue: Castelfranco del Veneto (Italy)
+    url: >-
+      https://www.facebook.com/pages/Teatro-Accademico-Di-Castelfranco/118045221586455
   - title: Live concert under Hitchcock silent move "the Lodger' with Jeroen van Veen
     date: 2020-01-29 19:00:00
     location: Coral Gables Art Cinema
