Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -40,7 +40,9 @@ items:
     location: De Meerse
     venue: Hoofddorp (NL)
     url: 'https://www.demeerse.nl/'
-  - title: Canto Ostinato and Beyond
+  - title: >-
+      Canto Ostinato and Beyond with Jeroen van Veen, Aart Bergwerff and Nando
+      Russo
     date: 2020-02-28 20:00:00
     location: TenClub
     venue: Amsterdam
