Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -65,11 +65,11 @@ items:
     location: Jazz Center (KZN University)
     venue: Durban (South Africa)
     url: 'https://www.facebook.com/UKZNJazzcentre/'
-  - title: 'Jazz Plaza Festival, Havana , Cuba'
-    date: 2020-01-14 15:00:00
-    location: more details soon
-    venue:
-    url: 'http://festivaljazzplaza.com/en/'
+  - title: Mike del Ferro trio PAP Jazzfestival
+    date: 2020-01-25 22:00:00
+    location: Quartier Latin
+    venue: Petionville - Haiti
+    url: www.papjazzhaiti.org
   - title: Yoga Experience Concert with André Heuvelman
     date: 2019-12-21 18:00:00
     location: Down Town
