Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -34,11 +34,11 @@ items:
     location: Smederij Jazz Club
     venue: Groningen
     url:
-  - title: Mike del Ferro and Jeroen van Veen- Canto Ostinato and Beyond
-    date: 2020-01-09 20:00:00
-    location: De Meerse
-    venue: Hoofddorp (NL)
-    url: 'https://www.demeerse.nl/'
+  - title: Mike del Ferro and Luca Ciarla
+    date: 2020-06-27 20:00:00
+    location: TBA
+    venue: Rome (Italy)
+    url:
   - title: >-
       Canto Ostinato and Beyond with Jeroen van Veen, Aart Bergwerff and Nando
       Russo
