--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -56,7 +56,7 @@ items:
       https://www.facebook.com/pages/Teatro-Accademico-Di-Castelfranco/118045221586455
   - title: Live concert under Hitchcock silent move "the Lodger' with Jeroen van Veen
     date: 2020-01-29 19:00:00
-    location: Coral Gables Art Cinema
+    location: 'Coral Gables Art Cinema, 260 Aragon Avenue'
     venue: Miami
     url: 'http://www.dranoff2piano.org/events.html'
   - title: Mike del Ferro trio
