Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -4,9 +4,9 @@ items:
     location: Port au Prince
     venue: Haiti
     url: 'http://papjazzhaiti.org/'
-  - title: Mike del Ferro / Joris Teepe / Rogerio Boccato
+  - title: Mike del Ferro / Joris Teepe / Rogerio Boccato/Wilson Texeira
     date: 2020-02-14 20:30:00
-    location: TBA
+    location: 'Villa Randwijk Jazz, Catharina van Klevepark 10'
     venue: Amstelveen
     url:
   - title: Meditative Concert with  Mesmerizing Visuals
