--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,9 +1,9 @@
 items:
-  - title: Haiti Jazz Festival with Mushy Widmaier
-    date: 2020-01-23 19:30:00
-    location: Port au Prince
-    venue: Haiti
-    url: 'http://papjazzhaiti.org/'
+  - title: Guest  with Luca Ciarla
+    date: 2020-04-25 19:30:00
+    location: Youngblood
+    venue: Cape Town (South Africa)
+    url: 'https://www.facebook.com/events/228580984833169/'
   - title: Mike del Ferro / Joris Teepe / Rogerio Boccato/Wilson Texeira
     date: 2020-02-14 20:30:00
     location: 'Villa Randwijk Jazz, Catharina van Klevepark 10'
