--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -29,11 +29,11 @@ items:
     location: Nassau Theatre
     venue: Cape Town (South Africa)
     url: 'https://www.grooteschuurhigh.co.za/'
-  - title: Mike del Ferro trio
-    date: 2020-02-04 21:00:00
-    location: Smederij Jazz Club
-    venue: Groningen
-    url:
+  - title: Yoga cocnert with André Heuvelman - Laydowntown
+    date: 2020-05-14 20:00:00
+    location: Laurenskerk
+    venue: Rotterdam
+    url: 'https://www.andreheuvelman.nl/lay-downtown/'
   - title: Mike del Ferro and Luca Ciarla
     date: 2020-06-27 20:00:00
     location: TBA
