Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -64,11 +64,11 @@ items:
     location: Jazz Center (KZN University)
     venue: Durban (South Africa)
     url: 'https://www.facebook.com/UKZNJazzcentre/'
-  - title: Mike del Ferro trio PAP Jazzfestival
-    date: 2020-01-25 22:00:00
-    location: Quartier Latin
-    venue: Petionville - Haiti
-    url: www.papjazzhaiti.org
+  - title: with Trajecti Voces Choir
+    date: 2020-11-22 15:00:00
+    location: de Sjoel
+    venue: Amsterdam
+    url: www.splendoramsterdam.com
   - title: 'Jazz Plaza Festival , Havana, Cuba'
     date: 2020-01-16 18:00:00
     location:
