--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -5,9 +5,9 @@ items:
     venue: Cape Town (South Africa)
     url: 'https://www.facebook.com/events/228580984833169/'
   - title: Mike del Ferro / Joris Teepe / Rogerio Boccato/Wilson Texeira
-    date: 2020-02-14 20:30:00
-    location: 'Villa Randwijk Jazz, Catharina van Klevepark 10'
-    venue: Amstelveen
+    date: 2020-04-24 20:00:00
+    location: The Ear
+    venue: 'Cape Town, South Africa'
     url:
   - title: Meditative Concert with  Mesmerizing Visuals
     date: 2020-03-15 15:30:00
