Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,7 +1,7 @@
 items:
   - title: Guest  with Luca Ciarla
     date: 2020-04-25 19:30:00
-    location: Youngblood
+    location: 'YoungBlood , Breestreet'
     venue: Cape Town (South Africa)
     url: 'https://www.facebook.com/events/228580984833169/'
   - title: Mike del Ferro / Joris Teepe / Rogerio Boccato/Wilson Texeira
