Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -4,12 +4,12 @@ items:
     location: 'YoungBlood , Breestreet'
     venue: Cape Town (South Africa)
     url: 'https://www.facebook.com/events/228580984833169/'
-  - title: Mike del Ferro / Joris Teepe / Rogerio Boccato/Wilson Texeira
+  - title: Mike del Ferro solo and with Luca Ciarla
     date: 2020-04-24 20:00:00
     location: The Ear
     venue: 'Cape Town, South Africa'
     url:
-  - title: Meditative Concert with  Mesmerizing Visuals
+  - title: Slow Water Music - Film Concert
     date: 2020-03-15 15:30:00
     location: Steenakker
     venue: Haps (Nijmegen) NL
@@ -18,7 +18,7 @@ items:
     date: 2020-03-19 20:00:00
     location: Geertekert
     venue: Utrecht (NL)
-    url:
+    url: 'https://laydowntown.com/'
   - title: 'Jacques Brel and Beyond, Mike del Ferro and Micheline van Houtem'
     date: 2020-03-12 20:30:00
     location: Splendor
@@ -29,23 +29,21 @@ items:
     location: Nassau Theatre
     venue: Cape Town (South Africa)
     url: 'https://www.grooteschuurhigh.co.za/'
-  - title: Yoga cocnert with André Heuvelman - Laydowntown
+  - title: Yoga concert with André Heuvelman - Laydowntown
     date: 2020-05-14 20:00:00
     location: Laurenskerk
     venue: Rotterdam
-    url: 'https://www.andreheuvelman.nl/lay-downtown/'
+    url: 'https://laydowntown.com/'
   - title: Mike del Ferro and Luca Ciarla
     date: 2020-06-27 20:00:00
     location: TBA
     venue: Rome (Italy)
     url:
-  - title: >-
-      Canto Ostinato and Beyond with Jeroen van Veen, Aart Bergwerff and Nando
-      Russo
-    date: 2020-02-28 20:00:00
-    location: TenClub
-    venue: Amsterdam
-    url: www.tenclub.nl
+  - title: Mike del ferro Solo Recital (afternoon concert!)
+    date: 2020-05-10 16:00:00
+    location: Recitals at Glenshiel
+    venue: Johannesburg (South Africa)
+    url: 'https://www.facebook.com/recitalsatglenshiel/'
   - title: >-
       4 piano's: Irene Russo, Jeroen van Veen, Mike del Ferro, Fred van
       Oldenburg
