--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -67,3 +67,23 @@ items:
     location: Dom Tower
     venue: Utrecht
     url:
+  - title: Solo recital at Piano Passion festival
+    date: 2020-05-08 20:00:00
+    location: Howard College Theatre
+    venue: Durban (South Africa)
+    url:
+  - title: Mike del Ferro and Luca Ciarla
+    date: 2020-04-30 20:00:00
+    location: TBA
+    venue: Lusaka (Zambia)
+    url:
+  - title: Mike Boddé and Mike del Ferro  Mike Kwadraat (afternoon concert!)
+    date: 2020-05-17 20:00:00
+    location: Jazz in het Kasteel (Jazz at the Castle)
+    venue: Vorden (NL)
+    url: 'https://www.facebook.com/keukenvanhackfort/'
+  - title: 'Mozambique and South Africa tour, more details soon, first half of July'
+    date: 2020-06-29 20:00:00
+    location:
+    venue:
+    url:
