Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -82,7 +82,7 @@ items:
     location: Jazz in het Kasteel (Jazz at the Castle)
     venue: Vorden (NL)
     url: 'https://www.facebook.com/keukenvanhackfort/'
-  - title: 'Mozambique and South Africa tour, more details soon, first half of July'
+  - title: 'Mozambique and South Africa tour, first half of July, more details soon'
     date: 2020-06-29 20:00:00
     location:
     venue:
