Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -24,7 +24,7 @@ items:
     location: Splendor
     venue: Amsterdam
     url: 'https://www.splendoramsterdam.com'
-  - title: Mike del Ferro & Luca Ciarla
+  - title: Mike del Ferro trio  & Luca Ciarla
     date: 2020-04-26 20:00:00
     location: Nassau Theatre
     venue: Cape Town (South Africa)
