--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,9 +1,9 @@
 items:
-  - title: Guest  with Luca Ciarla
+  - title: Solo Recital
     date: 2020-04-25 19:30:00
-    location: 'YoungBlood , Breestreet'
-    venue: Cape Town (South Africa)
-    url: 'https://www.facebook.com/events/228580984833169/'
+    location: The Ear
+    venue: Cape Town / Woodstock(South Africa)
+    url:
   - title: Mike del Ferro solo and with Luca Ciarla
     date: 2020-04-24 20:00:00
     location: The Ear
