--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -4,12 +4,12 @@ items:
     location: The Ear
     venue: Cape Town / Woodstock(South Africa)
     url:
-  - title: Mike del Ferro solo and with Luca Ciarla
+  - title: Mike del Ferro solo recital
     date: 2020-04-24 20:00:00
     location: The Ear
-    venue: 'Cape Town, South Africa'
+    venue: 'Cape Town / Woodstock, South Africa'
     url:
-  - title: Slow Water Music - Film Concert
+  - title: to be postponed due to Corona Crisis Slow Water Music - Film Concert
     date: 2020-03-15 15:30:00
     location: Steenakker
     venue: Haps (Nijmegen) NL
