--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -14,7 +14,7 @@ items:
     location: Steenakker
     venue: Haps (Nijmegen) NL
     url: 'http://www.desteenakker.nl'
-  - title: Yoga Concert with Andre Heuvelman
+  - title: to be postponed due to Corona Crisis -Yoga Concert with Andre Heuvelman
     date: 2020-03-19 20:00:00
     location: Geertekert
     venue: Utrecht (NL)
