Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -33,7 +33,7 @@ items:
     url: 'https://www.grooteschuurhigh.co.za/'
   - title: Yoga concert with André Heuvelman - Laydowntown
     date: 2020-12-04 19:00:00
-    location: Laurenskerk
+    location: Pelgrimsvaderkerk
     venue: Rotterdam
     url: 'https://laydowntown.com/'
   - title: Mike del Ferro and Luca Ciarla
