--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,9 +1,9 @@
 items:
-  - title: Mike del Ferro solo recital
-    date: 2020-04-24 20:00:00
-    location: The Ear
-    venue: 'Cape Town / Woodstock, South Africa'
-    url:
+  - title: Mike del Ferro and Leoni Jansen
+    date: 2020-06-18 20:00:00
+    location: De Hallen
+    venue: Amsterdam
+    url: www.popuppodium.com
   - title: to be postponed due to Corona Crisis Slow Water Music - Film Concert
     date: 2020-03-15 15:30:00
     location: Steenakker
