--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -9,23 +9,16 @@ items:
     location: Steenakker
     venue: Haps (Nijmegen) NL
     url: 'http://www.desteenakker.nl'
+  - title:
+    date: 2020-03-19 20:00:00
+    location:
+    venue:
+    url:
   - title: to be postponed due to Corona Crisis -Yoga Concert with Andre Heuvelman
     date: 2020-03-19 20:00:00
-    location: Geertekert
+    location: Geertekerk
     venue: Utrecht (NL)
     url: 'https://laydowntown.com/'
-  - title: >-
-      to be postponed due to Corona Crisis -Jacques Brel and Beyond, Mike del
-      Ferro and Micheline van Houtem
-    date: 2020-03-12 20:30:00
-    location: Splendor
-    venue: Amsterdam
-    url: 'https://www.splendoramsterdam.com'
-  - title: Mike del Ferro trio
-    date: 2020-04-26 20:00:00
-    location: Nassau Theatre
-    venue: Cape Town (South Africa)
-    url: 'https://www.grooteschuurhigh.co.za/'
   - title: Yoga concert with André Heuvelman - Laydowntown
     date: 2020-12-04 19:00:00
     location: Pelgrimsvaderkerk
@@ -36,57 +29,8 @@ items:
     location: TBA
     venue: Rome (Italy)
     url:
-  - title: Mike del ferro Solo Recital (afternoon concert!)
-    date: 2020-05-10 16:00:00
-    location: Recitals at Glenshiel
-    venue: Johannesburg (South Africa)
-    url: 'https://www.facebook.com/recitalsatglenshiel/'
-  - title: >-
-      4 piano's: Irene Russo, Jeroen van Veen, Mike del Ferro, Fred van
-      Oldenburg
+  - title:
     date: 2020-04-21 20:00:00
-    location: Teatro Accademico
-    venue: Castelfranco del Veneto (Italy)
-    url: >-
-      https://www.facebook.com/pages/Teatro-Accademico-Di-Castelfranco/118045221586455
-  - title: Mike del Ferro trio
-    date: 2020-05-06 20:00:00
-    location: Jazz Center (KZN University)
-    venue: Durban (South Africa)
-    url: 'https://www.facebook.com/UKZNJazzcentre/'
-  - title: with Trajecti Voces Choir
-    date: 2020-11-22 15:00:00
-    location: de Sjoel
-    venue: Amsterdam
-    url: www.splendoramsterdam.com
-  - title: 'DOM concert, DOM Tower'
-    date: 2020-08-24 20:00:00
-    location: Dom Tower
-    venue: Utrecht
-    url:
-  - title: Solo recital at Piano Passion festival
-    date: 2020-05-08 20:00:00
-    location: Howard College Theatre
-    venue: Durban (South Africa)
-    url:
-  - title: Mike del Ferro
-    date: 2020-04-30 20:00:00
-    location: TBA
-    venue: Lusaka (Zambia)
-    url:
-  - title: Mike Boddé and Mike del Ferro  Mike Kwadraat (afternoon concert!)
-    date: 2020-05-17 20:00:00
-    location: Jazz in het Kasteel (Jazz at the Castle)
-    venue: Vorden (NL)
-    url: 'https://www.facebook.com/keukenvanhackfort/'
-  - title: 'Mozambique and South Africa tour, first half of July, more details soon'
-    date: 2020-06-29 20:00:00
     location:
     venue:
     url:
-  - title: Film Concert - live music under a silent Hitchcock Movie
-    date: 2020-05-15 20:00:00
-    location: Cinema at Corendon Village Hotel
-    venue: Amsterdam / Badhoevedorp
-    url: >-
-      https://www.corendonhotels.com/corendon-village-hotel-amsterdam/corendon-cinema/
