Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -14,8 +14,8 @@ items:
     location:
     venue:
     url:
-  - title: to be postponed due to Corona Crisis -Yoga Concert with Andre Heuvelman
-    date: 2020-03-19 20:00:00
+  - title: Yoga Concert with Andre Heuvelman
+    date: 2020-09-10 20:00:00
     location: Geertekerk
     venue: Utrecht (NL)
     url: 'https://laydowntown.com/'
