Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -14,3 +14,10 @@ items:
     location: Pelgrimsvaderkerk
     venue: Rotterdam
     url: 'https://laydowntown.com/'
+  - title: >-
+      Many canceled concerts are being scheduled again, stay tuned for new
+      dates!
+    date: 2020-05-31 19:00:00
+    location:
+    venue:
+    url:
