Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,9 +1,10 @@
 items:
-  - title: Mike del Ferro and Leoni Jansen
-    date: 2020-06-18 20:00:00
-    location: De Hallen
-    venue: Amsterdam
-    url: www.popuppodium.com
+  - title: With André Heuvelman
+    date: 2020-07-04 20:00:00
+    location: De Lampegiet
+    venue: Veenendaal
+    url: >-
+      https://www.lampegiet.nl/agenda/2835/10_jaar_nachtgeluiden/andre_heuvelman_the_live_b_anda_
   - title: Yoga Concert with Andre Heuvelman
     date: 2020-09-10 20:00:00
     location: Geertekerk
