Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -27,3 +27,8 @@ items:
     location: Amsterdam
     venue:
     url:
+  - title: With Andre Heuvelman
+    date: 2020-07-10 20:00:00
+    location: TBA
+    venue:
+    url:
