Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -32,3 +32,8 @@ items:
     location: TBA
     venue:
     url:
+  - title: With Andre Heuvelman
+    date: 2020-07-15 20:00:00
+    location: TBA
+    venue:
+    url:
