Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,10 +1,9 @@
 items:
   - title: With André Heuvelman
-    date: 2020-07-04 20:00:00
-    location: De Lampegiet
-    venue: Veenendaal
-    url: >-
-      https://www.lampegiet.nl/agenda/2835/10_jaar_nachtgeluiden/andre_heuvelman_the_live_b_anda_
+    date: 2020-07-15 20:00:00
+    location: Emmerstrand
+    venue: Drenthe (NL)
+    url: 'https://www.wij-zijn-tijdloos.nl/'
   - title: Yoga Concert with Andre Heuvelman
     date: 2020-09-10 20:00:00
     location: Geertekerk
@@ -29,9 +28,9 @@ items:
     url:
   - title: With Andre Heuvelman
     date: 2020-07-10 20:00:00
-    location: TBA
-    venue:
-    url:
+    location: Erm
+    venue: Drenthe (NL)
+    url: 'https://www.wij-zijn-tijdloos.nl/'
   - title: With Andre Heuvelman
     date: 2020-07-15 20:00:00
     location: TBA
