--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -14,13 +14,11 @@ items:
     location: Pelgrimsvaderkerk
     venue: Rotterdam
     url: 'https://laydowntown.com/'
-  - title: >-
-      Many cancelled concerts are being scheduled again, stay tuned for new
-      dates!
-    date: 2020-05-31 19:00:00
-    location:
-    venue:
-    url:
+  - title: Spirit Connection - Tibetan Bowls Concert
+    date: 2020-07-12 13:00:00
+    location: Ermer Strand
+    venue: Drenthe (NL)
+    url: 'https://www.wij-zijn-tijdloos.nl/'
   - title: Yoga Concert with Andre Heuvelman
     date: 2020-12-03 19:00:00
     location: Amsterdam
@@ -36,3 +34,8 @@ items:
     location: TBA
     venue:
     url:
+  - title: Solo Recital
+    date: 2020-07-18 19:30:00
+    location: Splendor   2 sets with different audience  /corona rules  19.30 and 21.00
+    venue: Amsterdam
+    url: www.splendoramsterdam.com
