--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -31,9 +31,9 @@ items:
     url: 'https://www.wij-zijn-tijdloos.nl/'
   - title: With Andre Heuvelman
     date: 2020-07-15 20:00:00
-    location: TBA
-    venue:
-    url:
+    location: Ermer Strand
+    venue: Drenthe (NL)
+    url: 'https://www.wij-zijn-tijdloos.nl/'
   - title: Solo Recital
     date: 2020-07-18 19:30:00
     location: Splendor   2 sets with different audience  /corona rules  19.30 and 21.00
