Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -44,3 +44,8 @@ items:
     location:
     venue: Rhenen
     url:
+  - title: 'With Christine Clark, Sebastian Netta, Uli Wentzlaff - Opera meets Jazz'
+    date: 2020-08-23 19:30:00
+    location:
+    venue: Münster (Germany)
+    url:
