Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -29,8 +29,8 @@ items:
     location: Ermer Strand
     venue: Drenthe (NL)
     url: 'https://www.wij-zijn-tijdloos.nl/'
-  - title: With Andre Heuvelman
-    date: 2020-07-15 20:00:00
+  - title: Spirit Connection -Tibetan Bowls Concert
+    date: 2020-07-26 20:00:00
     location: Ermer Strand
     venue: Drenthe (NL)
     url: 'https://www.wij-zijn-tijdloos.nl/'
