Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -14,11 +14,11 @@ items:
     location: Pelgrimsvaderkerk
     venue: Rotterdam
     url: 'https://laydowntown.com/'
-  - title: Spirit Connection - Tibetan Bowls Concert
-    date: 2020-07-12 13:00:00
-    location: Ermer Strand
-    venue: Drenthe (NL)
-    url: 'https://www.wij-zijn-tijdloos.nl/'
+  - title: Mike del Ferro & Leoni Jansen
+    date: 2020-09-27 15:00:00
+    location: Beauforthuis
+    venue: Austerlitz (NL)
+    url: www.beauforthuis.nl
   - title: Yoga Concert with Andre Heuvelman
     date: 2020-12-03 19:00:00
     location: Amsterdam
