Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -25,10 +25,10 @@ items:
     venue:
     url:
   - title: With Andre Heuvelman
-    date: 2020-07-10 20:00:00
-    location: Ermer Strand
-    venue: Drenthe (NL)
-    url: 'https://www.wij-zijn-tijdloos.nl/'
+    date: 2020-12-19 20:00:00
+    location: Down Town
+    venue: Veenendaal (NL)
+    url: 'https://laydowntown.com/'
   - title: Spirit Connection -Tibetan Bowls Concert
     date: 2020-07-26 20:00:00
     location: Ermer Strand
