--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,9 +1,9 @@
 items:
-  - title: With André Heuvelman
-    date: 2020-07-15 20:00:00
-    location: Ermer strand
-    venue: Drenthe (NL)
-    url: 'https://www.wij-zijn-tijdloos.nl/'
+  - title: Canto Ostinato with Jeroen van Veen & Frank Steijns
+    date: 2020-08-29 19:00:00
+    location: Church
+    venue: Weert (NL)
+    url:
   - title: Yoga Concert with Andre Heuvelman
     date: 2020-09-10 20:00:00
     location: Geertekerk
