Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -29,11 +29,11 @@ items:
     location: Down Town
     venue: Veenendaal (NL)
     url: 'https://laydowntown.com/'
-  - title: Spirit Connection -Tibetan Bowls Concert
-    date: 2020-07-26 20:00:00
-    location: Ermer Strand
-    venue: Drenthe (NL)
-    url: 'https://www.wij-zijn-tijdloos.nl/'
+  - title: Live Stream Concert with Maya Fridman
+    date: 2020-09-12 20:00:00
+    location: TBA
+    venue:
+    url: facebook.com/mikedelferro2
   - title: Solo Recital
     date: 2020-07-18 19:30:00
     location: Splendor   2 sets with different audience  /corona rules  19.30 and 21.00
