Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -39,3 +39,8 @@ items:
     location:
     venue: Münster (Germany)
     url:
+  - title: with Spirit Connection - with beautiful gongs and soundscapes
+    date: 2020-08-16 12:00:00
+    location: Strand Erm
+    venue: Erm
+    url: wij-zijn-tijdloos.nl
