Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -44,3 +44,8 @@ items:
     location: Strand Erm
     venue: Erm
     url: wij-zijn-tijdloos.nl
+  - title: Vivienne Aerts & Mike del Ferro
+    date: 2020-08-13 20:00:00
+    location: van 't Huys
+    venue: Leiden (NL)
+    url: 'https://www.facebook.com/events/333730207638445'
