Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -49,3 +49,8 @@ items:
     location: van 't Huys
     venue: Leiden (NL)
     url: 'https://www.facebook.com/events/333730207638445'
+  - title: Leoni Jansen & Mike del Ferro (Afternoon concert!)
+    date: 2020-08-30 15:30:00
+    location: at Leoni's garden
+    venue: Beemster (not far from Amsterdam)
+    url: 'https://degroenezwaan.nl/events/leoni-jansen-en-mike-del-ferro/'
