--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -2,7 +2,7 @@ items:
   - title: Canto Ostinato with Jeroen van Veen & Frank Steijns
     date: 2020-08-29 19:00:00
     location: Church
-    venue: Weert (NL)
+    venue: Heerlen (NL)
     url:
   - title: Yoga Concert with Andre Heuvelman
     date: 2020-09-10 20:00:00
