Updated '_data/gigs.yml' via CloudCannon

--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -34,21 +34,21 @@ items:
     location: TBA
     venue:
     url: facebook.com/mikedelferro2
-  - title: 'With Christine Clark, Sebastian Netta, Uli Wentzlaff - Opera meets Jazz'
-    date: 2020-08-23 19:30:00
-    location:
-    venue: Münster (Germany)
+  - title: Tour Indonesia 15-30 november
+    date: 2020-11-15 19:30:00
+    location: More details later
+    venue:
     url:
-  - title: with Spirit Connection - with beautiful gongs and soundscapes
+  - title: With Andre Heuvelman
     date: 2020-08-16 12:00:00
-    location: Strand Erm
-    venue: Erm
-    url: wij-zijn-tijdloos.nl
-  - title: Vivienne Aerts & Mike del Ferro
-    date: 2020-08-13 20:00:00
-    location: van 't Huys
-    venue: Leiden (NL)
-    url: 'https://www.facebook.com/events/333730207638445'
+    location: Acousticum
+    venue: Ede
+    url: 'https://www.akoesticum.org/'
+  - title: WIth Sebastian Netta and friends
+    date: 2020-09-06 16:00:00
+    location: TBA
+    venue: Paderborn (Germany)
+    url: wuw-konzerte.de
   - title: Leoni Jansen & Mike del Ferro (Afternoon concert!)
     date: 2020-08-30 15:30:00
     location: at Leoni's garden
