--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -1,9 +1,4 @@
 items:
-  - title: Canto Ostinato with Jeroen van Veen & Frank Steijns
-    date: 2020-08-29 19:00:00
-    location: Church
-    venue: Heerlen (NL)
-    url:
   - title: Yoga Concert with Andre Heuvelman
     date: 2020-09-10 20:00:00
     location: Geertekerk
@@ -16,7 +11,7 @@ items:
     url: 'https://laydowntown.com/'
   - title: Mike del Ferro & Leoni Jansen
     date: 2020-09-27 15:00:00
-    location: Beauforthuis
+    location: Beauforthuis   extra show at 20.30!!
     venue: Austerlitz (NL)
     url: www.beauforthuis.nl
   - title: Yoga Concert with Andre Heuvelman
